// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageError should render 1`] = `
<div>
  <div
    class="pageContainer"
  >
    <header
      class="pageHeader"
    >
      <h1>
        Page title
      </h1>
    </header>
    <div
      class="pageContentWrapper"
    >
      <div
        class="pageError"
      >
        <h1>
          Oops!
        </h1>
        <h2>
          Looks like something went wrong...
        </h2>
        <div
          class="whatNext"
        >
          <p>
            What now?
          </p>
          <ul>
            <li>
              Try again later.
            </li>
            <li>
              Contact the application administrator.
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PageError with details should render closed 1`] = `
<div>
  <div
    class="pageContainer"
  >
    <header
      class="pageHeader"
    >
      <h1>
        Page title
      </h1>
    </header>
    <div
      class="pageContentWrapper"
    >
      <div
        class="pageError"
      >
        <h1>
          Oops!
        </h1>
        <h2>
          Looks like something went wrong...
        </h2>
        <div
          class="whatNext"
        >
          <p>
            What now?
          </p>
          <ul>
            <li>
              Try again later.
            </li>
            <li>
              Contact the application administrator.
            </li>
          </ul>
        </div>
        <div
          class="details"
        >
          <button
            data-testid="error-toggle"
          >
            Show
             details
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PageError with details should render opened when toggle clicked 1`] = `
<div>
  <div
    class="pageContainer"
  >
    <header
      class="pageHeader"
    >
      <h1>
        Page title
      </h1>
    </header>
    <div
      class="pageContentWrapper"
    >
      <div
        class="pageError"
      >
        <h1>
          Oops!
        </h1>
        <h2>
          Looks like something went wrong...
        </h2>
        <div
          class="whatNext"
        >
          <p>
            What now?
          </p>
          <ul>
            <li>
              Try again later.
            </li>
            <li>
              Contact the application administrator.
            </li>
          </ul>
        </div>
        <div
          class="details"
        >
          <button
            data-testid="error-toggle"
          >
            Hide
             details
          </button>
          <p>
            Some details about the error that occurred
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
